# python-fastapi-template

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
app/: __init__.py
app/bootstrap/: container.py  create_app.py
app/config/: __init__.py
app/exceptions/: __init__.py  client_side_error.py  client_side_exception.py  external_service_error.py  external_service_exception.py  server_side_error.py  server_side_exception.py  service_error.py  service_exception.py
app/http/controllers/: admin_auth_controller.py  admin_get_me_controller.py  admin_post_auth_signin_controller.py  admin_put_me_controller.py  health_controller.py
app/http/requests/: admin_sign_in.py  update_me.py
app/http/responses/: access_token.py  admin_me.py  admin_user.py  admin_users.py
app/interfaces/libraries/: access_token_interface.py  hash_interface.py
app/interfaces/repositories/: admin_user_repository_interface.py  base_repository_interface.py
app/interfaces/services/: admin_user_service_interface.py
app/interfaces/usecases/: get_admin_me_usecase_interface.py  (+1 more)
app/libraries/: __init__.py  access_token.py  hash.py  jwt.py
app/models/: admin_user.py
app/repositories/: admin_user_repository.py  base_repository.py
app/services/: admin_user_service.py
app/usecases/: get_admin_me_usecase.py  put_admin_me_usecase.py
database/migrations/: env.py
database/seeds/: __init__.py  admin_user_seeder.py  base_seeder.py
templates/data/: types.json
tests/: conftest.py
tests/feature/: conftest.py  utilities.py
(+53 files in other folders)
